# nitrogen

./: .gitmodules  Cargo.toml  NOTICE  README.md  RELEASING.md  build.rs  install.ps1  install.sh  release.toml  sts.sh
.github/workflows/: ci.yaml  ci.yml  release.yaml
examples/comet/: Dockerfile  run.sh
examples/grpc/: Cargo.toml  Dockerfile  README.md  run.sh
examples/grpc/proto/: helloworld.proto
examples/grpc/src/: client.rs  server.rs
examples/nginx/: Dockerfile  app.sh  index.html  run.sh
examples/nginx-tls/: Dockerfile  README.md  index.html  nginx.conf  run.sh
examples/nginx-unit/: Dockerfile  app.sh  config.json  run.sh
examples/redis/: Dockerfile  app.sh  run.sh
examples/runtime/: Dockerfile  README.md  app.sh  run.sh  server.crt  server.key  standalone.Dockerfile
examples/runtime/doctr/: app.py
examples/runtime/doctr_docker/: Dockerfile  app.py  requirements.txt
examples/runtime/doctr_docker/models/crnn_mobilenet_v3_small-7f36edec/: weights.index
examples/runtime/doctr_docker/models/db_resnet50-adcafc63/: weights.index
examples/vault/: Dockerfile  Dockerfile.tls  README.md  app-tls.sh  app.sh  config-tls.hcl  config.hcl  run.sh
src/: cf_utilities.rs  lib.rs  main.rs  template.rs
src/commands/: build.rs  delete.rs  deploy.rs  key.rs  launch.rs  logs.rs  mod.rs  setup.rs
src/templates/: launchTemplate.json  setupTemplate.json
