[package]
name = "nitrogen"
version = "0.2.4-alpha.1"
description = "Nitrogen is a tool for deploying web services to AWS Nitro Enclaves."
license = "Apache-2.0"
repository = "https://github.com/capeprivacy/nitrogen"
edition = "2021"
keywords = ["aws", "nitro", "enclave"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
aws-config = "0.49.0"
aws-sdk-cloudformation = "0.19.0"
failure = "0.1.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
home = "0.5.4"
rust-embed = "6.4.2"
rand = "0.8.5"
